--- a/yamaha-youth/src/css/school.css
+++ b/yamaha-youth/src/css/school.css
@@ -80,3 +80,14 @@ body {
   top: 0;
   margin-top: 120px;
 }
+#school-content .section-container .wrap-content .content .wrap .slider-content-1 .swiper {
+  border-radius: 8px;
+}
+#school-content .section-container .wrap-content .content .wrap .slider-content-1 .swiper .swiper-wrapper {
+  height: 361px;
+}
+#school-content .section-container .wrap-content .content .wrap .slider-content-1 .swiper .swiper-wrapper .swiper-slide img {
+  width: 100%;
+  object-fit: cover;
+  height: auto;
+}
