--- a/yamaha-youth/src/css/school.css
+++ b/yamaha-youth/src/css/school.css
@@ -80,6 +80,13 @@ body {
   top: 0;
   margin-top: 120px;
 }
+#school-content .section-container .wrap-content .content .wrap .title {
+  background: #5180A2;
+  color: #FFF;
+  padding: 10px 10px;
+  margin: 10px 0;
+  border-radius: 8px;
+}
 #school-content .section-container .wrap-content .content .wrap .slider-content-1 .swiper {
   border-radius: 8px;
 }
@@ -90,4 +97,8 @@ body {
   width: 100%;
   object-fit: cover;
   height: auto;
+}
+#school-content .section-container .wrap-content .content .wrap .slider-content-1 .swiper-pagination {
+  position: initial;
+  margin: 10px 0 30px 0;
 }
