--- a/yamaha-youth/src/css/school.css
+++ b/yamaha-youth/src/css/school.css
@@ -10,7 +10,7 @@ body {
   margin-top: 120px;
 }
 #school-content .section-container .wrap-content {
-  height: 1800px;
+  height: auto;
 }
 #school-content .section-container .wrap-content .left-side {
   position: relative;
@@ -86,9 +86,11 @@ body {
   padding: 10px 10px;
   margin: 10px 0;
   border-radius: 8px;
+  text-transform: uppercase;
 }
 #school-content .section-container .wrap-content .content .wrap .slider-content-1 .swiper {
   border-radius: 8px;
+  height: 322px;
 }
 #school-content .section-container .wrap-content .content .wrap .slider-content-1 .swiper .swiper-wrapper {
   height: 361px;
@@ -101,4 +103,48 @@ body {
 #school-content .section-container .wrap-content .content .wrap .slider-content-1 .swiper-pagination {
   position: initial;
   margin: 10px 0 30px 0;
+  height: 20px;
+  text-align: center;
+}
+#school-content .section-container .wrap-content .content .wrap .slider-content-1 .swiper-pagination-2 {
+  position: initial;
+  margin: 10px 0 30px 0;
+  height: 20px;
+  text-align: center;
+}
+#school-content .section-container .wrap-content .content .wrap .slider-content-1 .swiper-pagination-3 {
+  position: initial;
+  margin: 10px 0 30px 0;
+  height: 20px;
+  text-align: center;
+}
+#school-content .section-container .wrap-content .content .wrap .slider-content-1 .swiper-pagination-4 {
+  position: initial;
+  margin: 10px 0 30px 0;
+  height: 20px;
+  text-align: center;
+}
+#school-content .section-container .wrap-content .content .wrap .slider-content-1 .swiper-pagination-5 {
+  position: initial;
+  margin: 10px 0 30px 0;
+  height: 20px;
+  text-align: center;
+}
+#school-content .section-container .wrap-content .content .wrap .slider-content-1 .swiper-pagination-6 {
+  position: initial;
+  margin: 10px 0 30px 0;
+  height: 20px;
+  text-align: center;
+}
+#school-content .section-container .wrap-content .content .wrap .slider-content-1 .swiper-pagination-7 {
+  position: initial;
+  margin: 10px 0 30px 0;
+  height: 20px;
+  text-align: center;
+}
+#school-content .section-container .wrap-content .content .wrap .slider-content-1 .swiper-pagination-8 {
+  position: initial;
+  margin: 10px 0 30px 0;
+  height: 20px;
+  text-align: center;
 }
