--- a/yamaha-youth/assets/scss/school.scss
+++ b/yamaha-youth/assets/scss/school.scss
@@ -18,81 +18,84 @@ body {
 
         .destination {
           position: absolute;
-          height: 800px;
+          height: 80vh;
 
-          .latarkota {
-            position: relative;
-            height: 180px;
-
-            img {
-              border-radius: 20px;
-              width: 100%;
-              object-fit: cover;
-              height: 300px;
-            }
-
-            .wrap-desc {
-              position: absolute;
-              top: 110px;
-
-              .logo-wrap {
-                img {
-                  max-width: 267px;
-                  height: unset;
-                  object-fit: unset;
-                }
+          .wrap-destination{
+            height: 100%;
+            overflow-x: hidden;
+            overflow-y: auto;
+            .latarkota {
+              position: relative;
+              height: 180px;
+  
+              img {
+                border-radius: 20px;
+                width: 100%;
+                object-fit: cover;
+                height: 300px;
               }
-
-              .about-destination {
-                margin-top: 30px;
-                background: #B4DBF5;
-                margin-left: 10px;
-                margin-right: 10px;
-                border-radius: 8px;
-
-                .title {
-                  color: #5180A2;
-                  height: 100%;
-                  padding-top: 10px;
-                  padding-bottom: 2px;
-
-                  h4 {
-                    font-size: 20px;
-                    font-family: "gill-sans-1000", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  
+              .wrap-desc {
+                position: absolute;
+                top: 110px;
+  
+                .logo-wrap {
+                  img {
+                    max-width: 267px;
+                    height: unset;
+                    object-fit: unset;
                   }
-
-                  .captions {
-                    background: #fff;
-                    margin: 10px;
-                    border-radius: 8px;
-
-                    p {
-                      font-size: 12px;
-                      line-height: normal;
-                      padding: 10px;
+                }
+  
+                .about-destination {
+                  margin-top: 30px;
+                  background: #B4DBF5;
+                  margin-left: 10px;
+                  margin-right: 10px;
+                  border-radius: 8px;
+  
+                  .title {
+                    color: #5180A2;
+                    height: 100%;
+                    padding-top: 10px;
+                    padding-bottom: 2px;
+  
+                    h4 {
+                      font-size: 20px;
+                      font-family: "gill-sans-1000", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+                    }
+  
+                    .captions {
+                      background: #fff;
+                      margin: 10px;
+                      border-radius: 8px;
+  
+                      p {
+                        font-size: 12px;
+                        line-height: normal;
+                        padding: 10px;
+                      }
                     }
                   }
                 }
-              }
-
-              .share {}
-
-              .wrap-kategori {
-                .kategori {
-                  font-size: 14px;
-                  font-weight: 500;
-                  background: #B4DBF5;
-                  border-radius: 8px;
-                  text-transform: uppercase;
-                  color: #5180A2;
-                  padding: 10px 10px;
-                  margin: 10px 0;
+  
+                .share {}
+  
+                .wrap-kategori {
+                  .kategori {
+                    font-size: 14px;
+                    font-weight: 500;
+                    background: #B4DBF5;
+                    border-radius: 8px;
+                    text-transform: uppercase;
+                    color: #5180A2;
+                    padding: 10px 10px;
+                    margin: 10px 0;
+                  }
                 }
               }
             }
           }
-
-
         }
 
         #destination.fixed {
