--- a/yamaha-youth/assets/scss/school.scss
+++ b/yamaha-youth/assets/scss/school.scss
@@ -8,7 +8,7 @@ body {
 
 #school-content {
   margin-top: 120px;
-
+  margin-bottom: 120px;
   .section-container {
     .wrap-content {
       height: auto;
