--- a/yamaha-youth/src/css/school.css
+++ b/yamaha-youth/src/css/school.css
@@ -8,6 +8,7 @@ body {
 
 #school-content {
   margin-top: 120px;
+  margin-bottom: 120px;
 }
 #school-content .section-container .wrap-content {
   height: auto;
