--- a/yamaha-youth/assets/scss/school.scss
+++ b/yamaha-youth/assets/scss/school.scss
@@ -1,3 +1,7 @@
+html{
+  scroll-padding-top: 200px;
+}
+
 body {
   height: 100vh;
   background-image: url("../../assets/images/school-competition/bg-school.jpg");
@@ -19,6 +23,7 @@ body {
         .destination {
           position: absolute;
           height: 80vh;
+          width: 330px;
 
           .wrap-destination{
             height: 100%;
@@ -53,6 +58,7 @@ body {
                   margin-left: 10px;
                   margin-right: 10px;
                   border-radius: 8px;
+                  padding: 12px;
   
                   .title {
                     color: #5180A2;
@@ -69,6 +75,7 @@ body {
                       background: #fff;
                       margin: 10px;
                       border-radius: 8px;
+                      margin: 10px 0;
   
                       p {
                         font-size: 12px;
@@ -82,15 +89,19 @@ body {
                 .share {}
   
                 .wrap-kategori {
-                  .kategori {
-                    font-size: 14px;
-                    font-weight: 500;
-                    background: #B4DBF5;
-                    border-radius: 8px;
-                    text-transform: uppercase;
-                    color: #5180A2;
-                    padding: 10px 10px;
-                    margin: 10px 0;
+                  a{
+                    text-decoration: none;
+                    cursor: pointer;
+                    .kategori {
+                      font-size: 14px;
+                      font-weight: 500;
+                      background: #B4DBF5;
+                      border-radius: 8px;
+                      text-transform: uppercase;
+                      color: #5180A2;
+                      padding: 10px 10px;
+                      margin: 10px 0;
+                    }
                   }
                 }
               }
