--- a/yamaha-youth/assets/scss/school.scss
+++ b/yamaha-youth/assets/scss/school.scss
@@ -23,7 +23,7 @@ body {
         .destination {
           position: absolute;
           height: 80vh;
-          width: 330px;
+          width: 100%;
 
           .wrap-destination{
             height: 100%;
@@ -113,6 +113,7 @@ body {
           position: fixed;
           top: 0;
           margin-top: 120px;
+          width:inherit;
         }
       }
 
