Update Microsite LPS

--- a/festivalcreative-lps/src/css/snk.css
+++ b/festivalcreative-lps/src/css/snk.css
@@ -1,3 +1,6 @@
+.font-bold{
+  font-family: "montserat-bold";
+}
 #SnK {
   background-image: url("./src/image/home/headline/headline-mobile.png");
   background-position: top;
