Update Form Modal LPS

--- a/festivalcreative-lps/src/scss/main.scss
+++ b/festivalcreative-lps/src/scss/main.scss
@@ -830,12 +830,12 @@ body {
     
                         .modal-body {
                             text-align: center;
-                            padding: 10px 50px;
+                            padding: 10px 15px;
                             
                             .wrap-img{
                                 margin-bottom: 40px;
                                 img {
-                                    width: 257px;
+                                    width: 100%;
                                 }
                             }
 
