--- a/festivalcreative-lps/src/css/main.css
+++ b/festivalcreative-lps/src/css/main.css
@@ -621,13 +621,13 @@ body #form-modal #myModal .modal-dialog .modal-content .box-sticky .sticky #shar
   }
   body #form-modal #myModal .modal-dialog .modal-content .modal-body {
     text-align: center;
-    padding: 10px 50px;
+    padding: 10px 15px;
   }
   body #form-modal #myModal .modal-dialog .modal-content .modal-body .wrap-img {
     margin-bottom: 40px;
   }
   body #form-modal #myModal .modal-dialog .modal-content .modal-body .wrap-img img {
-    width: 257px;
+    width: 100%;
   }
   body #form-modal #myModal .modal-dialog .modal-content .modal-body h4 {
     font-size: 20px;
