--- a/yamaha-youth/assets/scss/school.scss
+++ b/yamaha-youth/assets/scss/school.scss
@@ -266,10 +266,11 @@ body {
   }
   
   #school-content {
-    margin-top: 120px;
+    margin-top: unset;
     margin-bottom: 120px;
   
     .section-container {
+      padding: unset;
       .wrap-content {
         height: auto;
   
@@ -278,7 +279,7 @@ body {
   
           .destination {
             position: relative;
-            height: 438px;
+            height: 478px;
             width: 100%;
   
             .wrap-destination {
@@ -291,7 +292,7 @@ body {
                 height: 180px;
   
                 img {
-                  border-radius: 20px;
+                  border-radius: 0px;
                   width: 100%;
                   object-fit: cover;
                   height: 300px;
@@ -306,6 +307,8 @@ body {
                       max-width: 267px;
                       height: unset;
                       object-fit: unset;
+                      padding-top: 30px;
+                      padding-bottom: 0px;
                     }
                   }
   
@@ -381,6 +384,8 @@ body {
         }
   
         .content {
+          padding-right: calc(var(--bs-gutter-x) * .5);
+          padding-left: calc(var(--bs-gutter-x) * .5);
           .wrap {
             .title {
               background: #5180A2;
