--- a/yamaha-youth/assets/scss/school.scss
+++ b/yamaha-youth/assets/scss/school.scss
@@ -130,6 +130,7 @@ body {
         position: absolute;
         top: 460px;
         width: 100%;
+        height: 100vh;
         a {
           text-decoration: none;
           cursor: pointer;
@@ -777,7 +778,39 @@ body {
 
 //medium
 
-@media (min-width: 768px) and (max-width: 991px) {}
+@media (min-width: 768px) and (max-width: 991px) {
+  #wrap-kategori {
+    position: absolute;
+    top: 510px !important;
+    a {
+      text-decoration: none;
+      cursor: pointer;
+
+      .kategori {
+        font-size: 14px;
+        font-weight: 500;
+        background: #B4DBF5;
+        border-radius: 8px;
+        text-transform: uppercase;
+        color: #5180A2;
+        padding: 10px 10px;
+        margin: 10px 0;
+      }
+    }
+  }
+
+  #wrap-kategori.fixed{
+    position: fixed;
+    top: 0;
+    margin-top: 120px;
+    flex: 0 0 auto;
+    width: 33.33333333%;
+    display: flex;
+    max-width: 100%;
+    padding-right: calc(var(--bs-gutter-x) * .5);
+    padding-left: calc(var(--bs-gutter-x) * .5);
+  }
+}
 
 // large
 
