--- a/yamaha-youth/src/css/school.css
+++ b/yamaha-youth/src/css/school.css
@@ -96,6 +96,7 @@ body {
   position: absolute;
   top: 460px;
   width: 100%;
+  height: 100vh;
 }
 #school-content .section-container .wrap-content #wrap-kategori a {
   text-decoration: none;
@@ -578,5 +579,36 @@ body {
     margin: 10px 0 30px 0;
     height: 20px;
     text-align: center;
+  }
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  #wrap-kategori {
+    position: absolute;
+    top: 510px !important;
+  }
+  #wrap-kategori a {
+    text-decoration: none;
+    cursor: pointer;
+  }
+  #wrap-kategori a .kategori {
+    font-size: 14px;
+    font-weight: 500;
+    background: #B4DBF5;
+    border-radius: 8px;
+    text-transform: uppercase;
+    color: #5180A2;
+    padding: 10px 10px;
+    margin: 10px 0;
+  }
+  #wrap-kategori.fixed {
+    position: fixed;
+    top: 0;
+    margin-top: 120px;
+    flex: 0 0 auto;
+    width: 33.33333333%;
+    display: flex;
+    max-width: 100%;
+    padding-right: calc(var(--bs-gutter-x) * 0.5);
+    padding-left: calc(var(--bs-gutter-x) * 0.5);
   }
 }
