--- a/yamaha-youth/assets/css/wp-school-competition.css
+++ b/yamaha-youth/assets/css/wp-school-competition.css
@@ -1,10 +1,11 @@
 #wp-school-competition {
   background-image: url("../images/wp-school-competition/school-competition-bg.png");
   background-color: #b4daf4;
-  background-position: top;
+  background-position: top center;
   background-size: cover;
   background-repeat: none;
-  min-height: 430px;
+  min-height: 360px;
+  max-height: fit-content;
 }
 
 .sc-desc {
@@ -18,8 +19,12 @@
   overflow-x: scroll;
   overflow-y: hidden;
   white-space: nowrap;
-  justify-content: center; /* Center the content horizontally */
-  align-items: center; /* Center the content vertically */
+  justify-content: center;
+  align-items: center;
+  padding: 0 15px;
+}
+.sc-cities-container a {
+  margin-right: 10px;
 }
 
 .sc-cities-container::-webkit-scrollbar {
@@ -27,14 +32,18 @@
 }
 
 .sc-city-image {
-  max-width: 100%; /* Ensure images do not exceed the container width */
-  height: auto; /* Maintain the aspect ratio of the images */
-  /* Display images in a row */
-  margin-right: 10px; /* Add spacing between images (adjust as needed) */
+  width: 100%;
+  min-width: 130px;
+  max-width: 182px;
+  height: auto;
 }
 
 @media (max-width: 997px) {
   #wp-school-competition p {
     font-size: 12px;
+  }
+
+  .sc-cities-container {
+    justify-content: flex-start;
   }
 }
