--- a/yamaha-youth/assets/css/photo-gallery.css
+++ b/yamaha-youth/assets/css/photo-gallery.css
@@ -38,11 +38,16 @@
   box-sizing: border-box;
   padding: 10px 0;
 }
+#photo-gallery .swiper-wrapper {
+  box-sizing: border-box;
+}
 
 #photo-gallery .mySwiper .swiper-slide {
   width: 25%;
-  height: 100%;
+  max-height: 100px;
   filter: brightness(0.3);
+  border-radius: 12px;
+  overflow: hidden;
 }
 
 #photo-gallery .mySwiper .swiper-slide-thumb-active {
