Style: Update Hero Element

--- a/yamaha-youth/assets/css/hero.css
+++ b/yamaha-youth/assets/css/hero.css
@@ -6,6 +6,7 @@
   background-position: center;
   background-size: cover;
   background-repeat: none;
+  position: relative;
 }
 
 .overlay {
@@ -27,6 +28,8 @@
   font-size: 20px;
   color: white;
   background-color: #089b65;
+
+  max-width: 650px;
 }
 
 .hero a {
@@ -36,18 +39,53 @@
 .hero a:hover {
   background-color: rgb(255, 255, 255, 0.3);
 }
+.hero .overlay {
+  z-index: 0;
+}
+.hero .hero-desc {
+  z-index: 1;
+}
 
 @media (max-width: 576px) {
   .hero {
     background-image: url("../images/hero/hero-mobile-bg.svg");
   }
 
-  .hero-content {
+  /* .hero-content {
     max-width: 80%;
-  }
+  } */
 
   .hero-desc {
     padding: 10px 16px;
     font-size: 16px;
+  }
+}
+
+@media (max-height: 700px) {
+  .hero-content img {
+    max-width: 350px;
+    margin-top: 50px;
+  }
+}
+@media (max-height: 600px) {
+  .hero-content img {
+    max-width: 225px;
+    margin-top: 50px;
+  }
+
+  .hero-desc {
+    padding: 10px 16px;
+    font-size: 12px;
+  }
+}
+@media (max-height: 600px) {
+  .hero-content img {
+    max-width: 200px;
+    margin-top: 50px;
+  }
+
+  .hero-desc {
+    padding: 10px 16px;
+    font-size: 10px;
   }
 }
